--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Wallpaper Downloader</title>
+    <title>BlackDrop Wallpaper Downloader</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <div class="container">
       <header>
-        <h1>Wallpaper Downloader</h1>
+        <h1 class="app-name">BlackDrop</h1>
         <input type="text" id="search" placeholder="Search wallpapers..." />
         <nav id="categories" aria-label="Wallpaper categories">
           <button class="category-btn active" data-category="all">All</button>
@@ -20,12 +20,6 @@
           <button class="category-btn" data-category="urban">Urban</button>
         </nav>
       </header>
-      <section id="featured" aria-label="Featured wallpapers">
-        <h2>Featured Wallpapers</h2>
-        <div id="featured-grid">
-          <!-- Featured wallpapers will be dynamically inserted here -->
-        </div>
-      </section>
       <main id="wallpaper-grid">
         <!-- Wallpapers will be dynamically inserted here -->
       </main>
@@ -39,7 +33,7 @@
       </div>
     </div>
     <footer>
-      <p>&copy; 2023 Wallpaper Downloader. All rights reserved.</p>
+      <p>&copy; 2023 BlackDrop Wallpaper Downloader. All rights reserved.</p>
     </footer>
     <script src="script.js"></script>
   </body>
